--- a/survey-form/index.html
+++ b/survey-form/index.html
@@ -5,5 +5,17 @@
     <title>Survey Form</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
-  <body></body>
+  <body>
+    <h1 id="title">Survey Form</h1>
+    <p id="description">Welcome to this form</p>
+    <form id="survey-form">
+      <fieldset>
+        <label for="name">Enter Your First Name: <input id="name" name="name" type="text" required /></label>
+        <label for="email">Enter Your Email: <input id="email" name="email" type="email" pattern="[a-z0-9]@[a-z].[a-z]" required /></label>
+      </fieldset>
+      <input type="submit" value="Submit" />
+
+
+    </form>
+  </body>
 </html>
