Half tests complete

--- a/survey-form/index.html
+++ b/survey-form/index.html
@@ -10,8 +10,18 @@
     <p id="description">Welcome to this form</p>
     <form id="survey-form">
       <fieldset>
-        <label for="name">Enter Your First Name: <input id="name" name="name" type="text" required /></label>
-        <label for="email">Enter Your Email: <input id="email" name="email" type="email" pattern="[a-z0-9]@[a-z].[a-z]" required /></label>
+        <label id="name-label" for="name">Name: (required) <input id="name" name="name" type="text" placeholder="Enter your name" required /></label>
+        <label id="email-label" for="email">Email: (required) <input id="email" name="email" type="email" pattern="[a-z0-9]@[a-z].[a-z]" placeholder="Enter your email" required /></label>
+      </fieldset>
+      <fieldset>
+        <label id="number-label" for="number">Age: <input id="number" name="number" type="number" min="13" max="140" placeholder="Enter your age"/></label>
+        <label id="gender-label" for="gender">Gender: 
+          <select id="dropdown" name="gender">
+            <option value="">Select your gender</option>
+            <option value="1">Male</option>
+            <option value="1">Female</option>
+            <option value="1">Other</option>
+        </label>
       </fieldset>
       <input type="submit" value="Submit" />
 
