--- a/survey-form/index.html
+++ b/survey-form/index.html
@@ -10,8 +10,7 @@
     <p id="description">Welcome to this form</p>
 
     <form id="survey-form">
-
-      <fieldset id="personal-details">
+      <fieldset>
         <legend>Personal details:</legend>
         <label id="name-label" for="name">Name: (required) <input id="name" name="name" type="text" placeholder="Enter your name" required /></label>
         <label id="email-label" for="email">Email: (required) <input id="email" name="email" type="email" pattern="[a-z0-9]@[a-z].[a-z]" placeholder="Enter your email" required /></label>
@@ -22,18 +21,20 @@
             <option value="1">Male</option>
             <option value="1">Female</option>
             <option value="1">Other</option>
+          </select>
         </label>
       </fieldset>
 
-      <fieldset id="questions">
+      <fieldset>
         <legend>Which console brand do you prefer?</legend>
         <label for="xbox"><input id="xbox" type="radio" name="console-type" class="inline" /> Xbox</label>
         <label for="playstation"><input id="playstation" type="radio" name="console-type" class="inline" /> Playstation</label>
-        <label for="nintendo"><input id="nintendo" type="radio" name="console-type" class="inline" /> Nintendo</label>
+        <label for="nintendo"><input id="nintendo" type="radio" name="console-type" class="inline"  /> Nintendo</label>
       </fieldset>
 
-      <input type="submit" value="Submit" />
-
+      
+        <input type="submit" value="Submit" />
+      
 
     </form>
   </body>
