--- a/survey-form/index.html
+++ b/survey-form/index.html
@@ -27,13 +27,12 @@
 
       <fieldset>
         <legend>Which console brand do you prefer?</legend>
-        <label for="xbox"><input id="xbox" type="radio" name="console-type" class="inline" /> Xbox</label>
-        <label for="playstation"><input id="playstation" type="radio" name="console-type" class="inline" /> Playstation</label>
-        <label for="nintendo"><input id="nintendo" type="radio" name="console-type" class="inline"  /> Nintendo</label>
+        <label for="xbox"><input value="1" id="xbox" type="radio" name="console-type" class="inline" /> Xbox</label>
+        <label for="playstation"><input value="2" id="playstation" type="radio" name="console-type" class="inline" /> Playstation</label>
+        <label for="nintendo"><input value="3" id="nintendo" type="radio" name="console-type" class="inline"  /> Nintendo</label>
       </fieldset>
 
-      
-        <input type="submit" value="Submit" />
+        <input id="submit" type="submit" value="Submit" />
       
 
     </form>
