--- a/survey-form/index.html
+++ b/survey-form/index.html
@@ -34,16 +34,16 @@
       
       <fieldset>
         <legend>Which game franchises do you like?</legend>
-        <label for="minecraft"><input id="minecraft" type="checkbox" required name="minecraft" class="inline" /> Minecraft</label>
-        <label for="grand-theft-auto"><input id="grand-theft-auto" type="checkbox" required name="grand-theft-auto" class="inline" /> Grand Theft Auto</label>
-        <label for="mario"><input id="mario" type="checkbox" required name="mario" class="inline" /> Mario</label>
-        <label for="final-fantasy"><input id="final-fantasy" type="checkbox" required name="final-fantasy" class="inline" /> Final Fantasy</label>
-        <label for="fortnite"><input id="fortnite" type="checkbox" required name="fortnite" class="inline" /> Fortnite</label>
-        <label for="halo"><input id="halo" type="checkbox" required name="halo" class="inline" /> Halo</label>
-        <label for="pokemon"><input id="pokemon" type="checkbox" required name="pokemon" class="inline" /> Pokemon</label>
-        <label for="call-of-duty"><input id="call-of-duty" type="checkbox" required name="call-of-duty" class="inline" /> Call of Duty</label>
-        <label for="super-smash-bros"><input id="super-smash-bros" type="checkbox" required name="super-smash-bros" class="inline" /> Super Smash Bros</label>
-        <label for="fifa"><input id="fifa" type="checkbox" required name="fifa" class="inline" /> FIFA</label>
+        <label for="minecraft"><input value="1" id="minecraft" type="checkbox" required name="minecraft" class="inline" /> Minecraft</label>
+        <label for="grand-theft-auto"><input value="2" id="grand-theft-auto" type="checkbox" required name="grand-theft-auto" class="inline" /> Grand Theft Auto</label>
+        <label for="mario"><input value="3" id="mario" type="checkbox" required name="mario" class="inline" /> Mario</label>
+        <label for="final-fantasy"><input value="4" id="final-fantasy" type="checkbox" required name="final-fantasy" class="inline" /> Final Fantasy</label>
+        <label for="fortnite"><input value="5" id="fortnite" type="checkbox" required name="fortnite" class="inline" /> Fortnite</label>
+        <label for="halo"><input value="6" id="halo" type="checkbox" required name="halo" class="inline" /> Halo</label>
+        <label for="pokemon"><input value="7" id="pokemon" type="checkbox" required name="pokemon" class="inline" /> Pokemon</label>
+        <label for="call-of-duty"><input value="8" id="call-of-duty" type="checkbox" required name="call-of-duty" class="inline" /> Call of Duty</label>
+        <label for="super-smash-bros"><input value="9" id="super-smash-bros" type="checkbox" required name="super-smash-bros" class="inline" /> Super Smash Bros</label>
+        <label for="fifa"><input value="10" id="fifa" type="checkbox" required name="fifa" class="inline" /> FIFA</label>
       </fieldset>
 
         <input id="submit" type="submit" value="Submit" />
